# ChangeLog for xfce-base/xfce4-session
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-session/ChangeLog,v 1.225 2014/07/24 10:54:57 ssuominen Exp $

  24 Jul 2014; Samuli Suominen <ssuominen@gentoo.org>
  xfce4-session-4.10.1-r2.ebuild, xfce4-session-4.11.0-r2.ebuild:
  Rename USE="udev" to USE="upower" wrt #516380

  18 Jul 2014; Samuli Suominen <ssuominen@gentoo.org>
  xfce4-session-4.10.1-r2.ebuild:
  Fix UPower dependency for non-systemd users.

  18 Jul 2014; Samuli Suominen <ssuominen@gentoo.org>
  -xfce4-session-4.10.1-r1.ebuild:
  old

  18 Jul 2014; Agostino Sarubbo <ago@gentoo.org> xfce4-session-4.10.1-r2.ebuild:
  Stable for sparc, wrt bug #513930

  18 Jul 2014; Agostino Sarubbo <ago@gentoo.org> xfce4-session-4.10.1-r2.ebuild:
  Stable for ia64, wrt bug #513930

  18 Jul 2014; Agostino Sarubbo <ago@gentoo.org> xfce4-session-4.10.1-r2.ebuild:
  Stable for alpha, wrt bug #513930

  18 Jul 2014; Agostino Sarubbo <ago@gentoo.org> xfce4-session-4.10.1-r2.ebuild:
  Stable for ppc64, wrt bug #513930

  18 Jul 2014; Agostino Sarubbo <ago@gentoo.org> xfce4-session-4.10.1-r2.ebuild:
  Stable for ppc, wrt bug #513930

  09 Jul 2014; Samuli Suominen <ssuominen@gentoo.org>
  xfce4-session-4.11.0-r2.ebuild:
  Fix building without UPower headers wrt
  http://bugzilla.xfce.org/show_bug.cgi?id=9952#c23. Thanks to mgorny for
  reporting.

  08 Jul 2014; Samuli Suominen <ssuominen@gentoo.org>
  -files/xfce4-session-4.11.0-upower-0.99.patch,
  -xfce4-session-4.11.0-r1.ebuild:
  old

*xfce4-session-4.11.0-r2 (08 Jul 2014)

  08 Jul 2014; Samuli Suominen <ssuominen@gentoo.org>
  +files/xfce4-session-4.11.0-upower-0.99.0.patch,
  +xfce4-session-4.11.0-r2.ebuild:
  Use updated UPower 0.99.0 patch from
  http://bugzilla.xfce.org/show_bug.cgi?id=9952#c20

  29 Jun 2014; Markus Meier <maekke@gentoo.org> xfce4-session-4.10.1-r2.ebuild:
  arm stable, bug #513930
