@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfce4-session
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-session/ChangeLog,v 1.225 2014/07/24 10:54:57 ssuominen Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-session/ChangeLog,v 1.226 2015/03/03 13:10:17 dlan Exp $
+
+  03 Mar 2015; Yixun Lan <dlan@gentoo.org> xfce4-session-4.11.0-r2.ebuild:
+  add arm64 support, tested on A53 board
 
   24 Jul 2014; Samuli Suominen <ssuominen@gentoo.org>
   xfce4-session-4.10.1-r2.ebuild, xfce4-session-4.11.0-r2.ebuild:
